--- a/packages/example-vue2/package.json
+++ b/packages/example-vue2/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sigma-interactive/unbuild-lib": "^1.0.0",
     "@vue/composition-api": "^1.4.6",
+    "element-ui": "^2.15.8",
     "vue": "^2.6.14"
   },
   "peerDependencies": {
@@ -23,6 +24,7 @@
     "library": "workspace:*",
     "typescript": "~4.5.5",
     "unplugin-auto-import": "^0.7.2",
+    "unplugin-vue-components": "^0.19.5",
     "unplugin-vue2-script-setup": "^0.10.2",
     "vite": "^2.8.4",
     "vite-plugin-vue2": "^1.9.3",
