add vue app config

--- a/packages/example-vue3/tsconfig.json
+++ b/packages/example-vue3/tsconfig.json
@@ -1,27 +1,14 @@
 {
-  "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "baseUrl": ".",
-    "declaration": true,
-    "declarationDir": "dist/types-tmp",
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "importHelpers": true,
-    "jsx": "preserve",
-    "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
-    "module": "esnext",
-    "moduleResolution": "node",
-    "outDir": "dist",
-    "paths": {
-      "@/*": ["./src/*"]
+  "files": [],
+  "references": [
+    {
+      "path": "./tsconfig.vite-config.json"
     },
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "sourceMap": true,
-    "strict": true,
-    "target": "esnext",
-    "types": ["node", "vite/client"],
-    "useDefineForClassFields": false
-  },
-  "include": ["**/*.ts", "**/*.d.ts", "**/*.vue"]
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.vitest.json"
+    }
+  ]
 }
