--- a/packages/example-vue3/package.json
+++ b/packages/example-vue3/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sigma-interactive/unbuild-lib": "^1.0.0",
     "element-plus": "^2.2.1",
+    "unocss": "^0.34.0",
     "vue": "^3.2.31"
   },
   "peerDependencies": {
@@ -19,11 +20,14 @@
   "devDependencies": {
     "@types/node": "^16.11.25",
     "@vitejs/plugin-vue": "^2.2.2",
+    "@vue/tsconfig": "^0.1.3",
     "library": "workspace:*",
     "typescript": "~4.5.5",
     "unplugin-auto-import": "^0.7.2",
     "unplugin-vue-components": "^0.19.5",
     "vite": "^2.8.4",
+    "vite-plugin-pages": "^0.23.0",
+    "vite-plugin-qiankun": "^1.0.14",
     "vue-tsc": "^0.31.4"
   }
 }
