--- a/packages/example-vue3/package.json
+++ b/packages/example-vue3/package.json
@@ -1,26 +1,31 @@
 {
-  "private": true,
   "name": "example-vue3",
   "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview --port 5050",
-    "typecheck": "vue-tsc --noEmit"
-  },
-  "dependencies": {
-    "@sigma-interactive/unbuild-lib": "^1.0.0",
-    "element-plus": "^2.2.1",
-    "unocss": "^0.34.0",
-    "vue": "^3.2.31"
+    "typecheck": "vue-tsc --noEmit",
+    "lint": "eslint --fix --ext .vue,.tsx,.ts ."
   },
   "peerDependencies": {
     "vue": "^3.2.31"
   },
+  "dependencies": {
+    "@sigma-interactive/unbuild-lib": "^1.0.0",
+    "@vueuse/core": "^8.5.0",
+    "element-plus": "^2.2.1",
+    "unocss": "^0.34.0",
+    "vue": "^3.2.31",
+    "vue-router": "^4.0.15"
+  },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.23.1",
     "@types/node": "^16.11.25",
     "@vitejs/plugin-vue": "^2.2.2",
     "@vue/tsconfig": "^0.1.3",
+    "eslint": "^8.16.0",
     "library": "workspace:*",
     "typescript": "~4.5.5",
     "unplugin-auto-import": "^0.7.2",
@@ -28,6 +33,7 @@
     "vite": "^2.8.4",
     "vite-plugin-pages": "^0.23.0",
     "vite-plugin-qiankun": "^1.0.14",
+    "vitest": "^0.12.9",
     "vue-tsc": "^0.31.4"
   }
 }
