--- a/packages/example-vue3/tsconfig.json
+++ b/packages/example-vue3/tsconfig.json
@@ -6,9 +6,9 @@
     },
     {
       "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.vitest.json"
     }
+    // {
+    //   "path": "./tsconfig.vitest.json"
+    // }
   ]
 }
