--- a/packages/example-vue3/tsconfig.vite-config.json
+++ b/packages/example-vue3/tsconfig.vite-config.json
@@ -1,6 +1,6 @@
 {
   "extends": "@vue/tsconfig/tsconfig.node.json",
-  "include": ["vite.config.*"],
+  "include": ["vite.config.*", "package.json"],
   "compilerOptions": {
     "composite": true,
     "types": ["node", "vitest"]
