--- a/packages/example-vue3/package.json
+++ b/packages/example-vue3/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.23.1",
+    "@iconify-json/ep": "^1.1.3",
     "@types/node": "^16.11.25",
     "@vitejs/plugin-vue": "^2.2.2",
     "@vue/tsconfig": "^0.1.3",
