--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,4 +11,10 @@
   "prettier.semi": false,
   "prettier.singleQuote": true,
   "prettier.trailingComma": "all",
+  "[typescript][typescriptreact][javascript][javascriptreact]": {
+    "editor.defaultFormatter":"Vue.volar"
+  },
+  "[vue]": {
+    "editor.defaultFormatter": "Vue.volar"
+  }
 }
